--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="salem">#F6A689</color>
     <color name="jeans">#7C8C9B</color>
+    <color name="jeans_transparent">#807C8C9B</color>
     <color name="soft_guava">#FEF7EF</color>
     <color name="army">#999B84</color>
     <color name="beige">#F4D5C0</color>
