--- a/app/src/main/res/layout/activity_complete_cat_biodata.xml
+++ b/app/src/main/res/layout/activity_complete_cat_biodata.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_guava"
-    tools:context=".CompleteCatBiodataActivity">
+    tools:context=".feature.cat.CompleteCatBiodataActivity">
     
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
