--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".feature.MainActivity">
 
     <ImageView
         android:id="@+id/imageView12"
