--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_guava"
-    tools:context=".MainActivity">
-
-
+    tools:context=".feature.MainActivity">
 
     <ImageView
         android:id="@+id/imageView15"
