--- a/app/src/main/res/layout/activity_mating_2.xml
+++ b/app/src/main/res/layout/activity_mating_2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_guava"
-    tools:context=".MainActivity">
+    tools:context=".feature.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -101,6 +101,16 @@
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView21"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
+        <TextView
+            android:id="@+id/textView35"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:fontFamily="@font/mlight"
+            android:text="Umur/Ras"
+            android:textColor="@color/jeans"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/textView34"
+            app:layout_constraintTop_toBottomOf="@+id/textView34" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -236,8 +246,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:valueFrom="0"
-            android:valueTo="300"
-            android:value="200"
+            android:valueTo="150"
+            android:value="0"
             android:theme="@style/slider_red"
             app:layout_constraintEnd_toEndOf="@+id/textView29"
             app:layout_constraintStart_toStartOf="@+id/textView26"
