--- a/app/src/main/res/layout/activity_mating_4.xml
+++ b/app/src/main/res/layout/activity_mating_4.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/backdrop_1"
-    tools:context=".MainActivity"
+    tools:context=".feature.MainActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -60,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <ImageView
+            android:id="@+id/mainPhoto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="12dp"
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_4">
+        app:layout_constraintTop_toBottomOf="@id/catsex">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -149,7 +149,7 @@
     </HorizontalScrollView>
 
     <TextView
-        android:id="@+id/text_1"
+        android:id="@+id/catname"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="24dp"
@@ -164,30 +164,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView22"-->
-<!--        android:layout_width="30dp"-->
-<!--        android:layout_height="25dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:background="#FFFFFF"-->
-<!--        android:src="@drawable/location_cat"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/text_1"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/text_1" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/text_2"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="25dp"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:text="Lokasi"-->
-<!--        android:textAlignment="textStart"-->
-<!--        android:textColor="@color/navy"-->
-<!--        android:textSize="18sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView22"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/text_1"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/imageView22"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/imageView22" />-->
-
     <ImageView
         android:id="@+id/imageView23"
         android:layout_width="30dp"
@@ -195,12 +171,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_pawprint"
-        app:layout_constraintStart_toStartOf="@+id/text_1"
-        app:layout_constraintTop_toBottomOf="@+id/text_1" />
+        app:layout_constraintStart_toStartOf="@+id/catname"
+        app:layout_constraintTop_toBottomOf="@+id/catname" />
 
     <TextView
-        android:id="@+id/text_3"
-        android:layout_width="0dp"
+        android:id="@+id/catage"
+        android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:text="Umur(thn)/Ras"
@@ -222,7 +198,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView23" />
 
     <TextView
-        android:id="@+id/text_4"
+        android:id="@+id/catsex"
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -244,7 +220,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_4" />
+        app:layout_constraintTop_toBottomOf="@id/catsex" />
 
     <View
         android:id="@+id/divider2"
@@ -283,8 +259,8 @@
         app:layout_constraintTop_toBottomOf="@+id/text_5" />
 
     <TextView
-        android:id="@+id/text_6"
-        android:layout_width="0dp"
+        android:id="@+id/catvaccine"
+        android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:text="11-11-2020"
@@ -306,11 +282,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_6" />
+        app:layout_constraintTop_toBottomOf="@+id/catvaccine" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
@@ -333,8 +309,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
-        android:id="@+id/textView22"
-        android:layout_width="0dp"
+        android:id="@+id/catparasite"
+        android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:text="11-11-2020"
@@ -359,7 +335,7 @@
             android:text="Ubah"
             android:textColor="@color/navy"
             app:layout_constraintStart_toStartOf="@+id/linearLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textView22">
+            app:layout_constraintTop_toBottomOf="@+id/catparasite">
 
             <ImageView
                 android:layout_width="30dp"
