--- a/app/src/main/res/layout/activity_mating_5.xml
+++ b/app/src/main/res/layout/activity_mating_5.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/backdrop_1"
-    tools:context=".MainActivity">
+    tools:context=".feature.MainActivity">
 
 <androidx.constraintlayout.widget.ConstraintLayout
 
