--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,14 +7,21 @@
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="dita.shafira.mate.MyProfileActivity"
+        android:name="dita.shafira.mate.feature.MyProfileFragment"
         android:label="profile"
         tools:layout="@layout/activity_myprofile" />
+
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="dita.shafira.mate.DashboardActivity"
+        android:name="dita.shafira.mate.feature.DashboardFragment"
         android:label="profile"
         tools:layout="@layout/activity_dashboard" />
+
+    <fragment
+        android:id="@+id/navigation_chat"
+        android:name="dita.shafira.mate.feature.chat.ChatListFragment"
+        android:label="profile"
+        tools:layout="@layout/fragment_chat_list" />
 
 <!--    <fragment-->
 <!--        android:id="@+id/navigation_dashboard"-->
