--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -182,6 +182,7 @@
 
 
         <dita.shafira.mate.component.BtnSolid
+            android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_height="42dp"
             android:layout_marginTop="32dp"
