--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -47,7 +47,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/photo_human"
+        android:src="@drawable/ic_user"
         app:civ_border_color="@color/gray"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid"
             style="@style/MyTextInputLayout2"
-            app:startIconDrawable="@drawable/ic_user"
+            app:startIconDrawable="@drawable/ic_username"
             app:startIconTintMode="multiply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_user"
+                android:drawableLeft="@drawable/ic_username"
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/mlight"
                 android:hint="Nama Pengguna"
