--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -63,7 +63,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/photo_human"
+            android:src="@drawable/ic_user"
             app:civ_border_color="@color/gray"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -246,7 +246,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="History"
+            android:text="Riwayat Perkawinan"
             android:textColor="@color/soft_guava"
             android:textSize="18sp"
             android:textStyle="bold"
