--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -153,12 +153,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/popup"
-        android:elevation="20dp"
         android:layout_width="fill_parent"
-        android:layout_margin="20dp"
-        android:padding="20dp"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:background="@drawable/background_match"
+        android:elevation="20dp"
+        android:padding="10dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +167,7 @@
         tools:context=".feature.MainActivity">
 
         <ImageView
+            android:id="@+id/close"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/x_button_foreground"
@@ -230,8 +232,8 @@
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/photo_cat_1"
-                android:layout_width="125dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="120dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -240,8 +242,8 @@
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/photo_cat_2"
-                android:layout_width="125dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="120dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintCircleRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
