--- a/app/src/main/res/layout/activity_edit_cat.xml
+++ b/app/src/main/res/layout/activity_edit_cat.xml
@@ -105,7 +105,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:startIconDrawable="@drawable/ic_user"
+                app:startIconDrawable="@drawable/ic_user_2"
                 app:startIconTintMode="multiply">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -113,7 +113,7 @@
                     style="@style/MyTextInputEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_user"
+                    android:drawableLeft="@drawable/ic_user_2"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/mlight"
                     android:hint="Nama Kucing"
