--- a/app/src/main/res/layout/activity_fill_cat_biodata.xml
+++ b/app/src/main/res/layout/activity_fill_cat_biodata.xml
@@ -102,7 +102,7 @@
                     style="@style/MyTextInputEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_user"
+                    android:drawableLeft="@drawable/ic_user_2"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/mlight"
                     android:hint="Nama Kucing"
