--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -71,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:startIconDrawable="@drawable/ic_user"
+        app:startIconDrawable="@drawable/ic_user_2"
         app:startIconTintMode="multiply">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -79,7 +79,7 @@
             style="@style/MyTextInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_user"
+            android:drawableLeft="@drawable/ic_user_2"
             android:drawablePadding="10dp"
             android:fontFamily="@font/mlight"
             android:hint="Email"
