--- a/app/src/main/res/layout/item_history_mating.xml
+++ b/app/src/main/res/layout/item_history_mating.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="20dp"
-    android:layout_width="390dp"
+    android:layout_width="match_parent"
     android:layout_height="250dp"
 
     android:layout_margin="5dp">
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/imageView"
+            android:id="@+id/photo_cat_1"
             android:layout_width="125dp"
             android:layout_height="150dp"
             android:layout_marginStart="8dp"
@@ -32,27 +32,27 @@
             app:riv_corner_radius="10dp" />
 
         <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/photo_cat_2"
             android:layout_width="125dp"
             android:layout_height="150dp"
             app:layout_constraintCircleRadius="10dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/photo_cat_1"
             app:riv_corner_radius="10dp" />
 
         <ImageView
             android:layout_width="65dp"
             android:layout_height="50dp"
             android:src="@drawable/cat_gender"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintBottom_toBottomOf="@+id/photo_cat_2"
+            app:layout_constraintEnd_toStartOf="@+id/photo_cat_2"
+            app:layout_constraintStart_toEndOf="@+id/photo_cat_1"
+            app:layout_constraintTop_toTopOf="@+id/photo_cat_1" />
 
         <TextView
-            android:id="@+id/textView14"
-            android:layout_width="53dp"
+            android:id="@+id/tv_cat_name_1"
+            android:layout_width="wrap_content"
             android:layout_height="13dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/mmedium"
@@ -61,11 +61,11 @@
             android:textColor="@color/navy"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintStart_toStartOf="@+id/photo_cat_1"
+            app:layout_constraintTop_toBottomOf="@+id/photo_cat_1" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/tv_cat_sex_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/mlight"
@@ -77,10 +77,10 @@
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_cat_name_1" />
 
         <TextView
-            android:id="@+id/textView30"
+            android:id="@+id/tv_cat_race_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -92,10 +92,10 @@
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_cat_sex_1" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/tv_cat_name_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -105,11 +105,11 @@
             android:textColor="@color/navy"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintEnd_toEndOf="@+id/photo_cat_2"
+            app:layout_constraintTop_toBottomOf="@+id/photo_cat_1" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/tv_cat_sex_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -119,11 +119,11 @@
             android:textColor="@color/navy"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textView16"
-            app:layout_constraintTop_toBottomOf="@+id/textView16" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_cat_name_2"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cat_name_2" />
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/tv_cat_race_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/mlight"
@@ -133,11 +133,8 @@
             android:textColor="@color/navy"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textView17"
-            app:layout_constraintTop_toBottomOf="@+id/textView17" />
-
-
-
+            app:layout_constraintEnd_toEndOf="@+id/tv_cat_sex_2"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cat_sex_2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
